// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Cookware quantity stringify("1 1/2") -> "1 1/2" 1`] = `
{
  "alias": null,
  "name": "a",
  "note": null,
  "quantity": {
    "type": "fixed",
    "value": {
      "type": "number",
      "value": {
        "type": "fraction",
        "value": {
          "den": 2,
          "err": 0,
          "num": 1,
          "whole": 1,
        },
      },
    },
  },
}
`;

exports[`Cookware quantity stringify("1 300/401") -> "1 300/401" 1`] = `
{
  "alias": null,
  "name": "a",
  "note": null,
  "quantity": {
    "type": "fixed",
    "value": {
      "type": "number",
      "value": {
        "type": "fraction",
        "value": {
          "den": 401,
          "err": 0,
          "num": 300,
          "whole": 1,
        },
      },
    },
  },
}
`;

exports[`Cookware quantity stringify("1/2") -> "1/2" 1`] = `
{
  "alias": null,
  "name": "a",
  "note": null,
  "quantity": {
    "type": "fixed",
    "value": {
      "type": "number",
      "value": {
        "type": "fraction",
        "value": {
          "den": 2,
          "err": 0,
          "num": 1,
          "whole": 0,
        },
      },
    },
  },
}
`;

exports[`Cookware quantity stringify("1-2") -> "1-2" 1`] = `
{
  "alias": null,
  "name": "a",
  "note": null,
  "quantity": {
    "type": "fixed",
    "value": {
      "type": "text",
      "value": "1-2",
    },
  },
}
`;

exports[`Cookware quantity stringify("100") -> "100" 1`] = `
{
  "alias": null,
  "name": "a",
  "note": null,
  "quantity": {
    "type": "fixed",
    "value": {
      "type": "number",
      "value": {
        "type": "regular",
        "value": 100,
      },
    },
  },
}
`;

exports[`Cookware quantity stringify("one") -> "one" 1`] = `
{
  "alias": null,
  "name": "a",
  "note": null,
  "quantity": {
    "type": "fixed",
    "value": {
      "type": "text",
      "value": "one",
    },
  },
}
`;
